--- a/B16 Ex03 Daniel 301344891 Mike 310675582/B16 Ex03 Daniel 301344891 Mike 310675582.csproj
+++ b/B16 Ex03 Daniel 301344891 Mike 310675582/B16 Ex03 Daniel 301344891 Mike 310675582.csproj
@@ -66,6 +66,7 @@
     </Compile>
     <Compile Include="IFilter.cs" />
     <Compile Include="ClonePrototype.cs" />
+    <Compile Include="IFilterStrategy.cs" />
     <Compile Include="LoginLogic.cs" />
     <Compile Include="FilterGroup.cs" />
     <Compile Include="FormFilterGroup.cs">
@@ -100,6 +101,7 @@
     <Compile Include="PopularPanelMgt.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RegexFilterStrategy.cs" />
     <Compile Include="Settings.cs" />
     <EmbeddedResource Include="FormFilterGroup.resx">
       <DependentUpon>FormFilterGroup.cs</DependentUpon>
