--- a/B16 Ex03 Daniel 301344891 Mike 310675582/B16 Ex03 Daniel 301344891 Mike 310675582.csproj
+++ b/B16 Ex03 Daniel 301344891 Mike 310675582/B16 Ex03 Daniel 301344891 Mike 310675582.csproj
@@ -61,6 +61,9 @@
     <Compile Include="ASpecialPictureBoxDecorator.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="SpecialPictrueBox_DecoratorClass.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="SpecialPictureBoxConcrete.cs">
       <SubType>Component</SubType>
     </Compile>
